--- a/src/icdrive_assets/src/index.html
+++ b/src/icdrive_assets/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>IC Drive</title>
     <base href="/">
-    <link type="text/css" rel="stylesheet" href="main.css" />
+    <link type="text/css" rel="stylesheet" href="../assets/main.css" />
  </head>
  <body>
     <div id="root"></div>
