--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,9 +3,9 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>IC Drive</title>
+    <title>Video Streaming</title>
     <base href="/">
-    <link type="text/css" rel="stylesheet" href="../assets/main.css" />
+    <link type="text/css" rel="stylesheet" href="main.css" />
  </head>
  <body>
     <div id="root"></div>
